Replace deprecated newInstance() method during reflection operations